--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -377,25 +377,29 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <a href="https://www.dropbox.com/scl/fi/jeukmwv5xqkq03eurcol1/MAR1_3_lecture.pdf?rlkey=k1j9t5156ll3zezky331er160&amp;dl=0">3</a>
 <a href="https://www.dropbox.com/scl/fi/zsvkkcito63zbp240591b/MAR1_4_lecture-2.pdf?rlkey=vt1u1olxxuwkym3y7tgqd2m2y&amp;dl=0">4</a>
 <a href="https://www.dropbox.com/scl/fi/n48v0g7ga6ee6ba1ciojj/MAR1_5_lecture.pdf?rlkey=l16h12ssye4c4072jjrcwd73t&amp;dl=0">5</a>
-<a href="https://www.dropbox.com/scl/fi/26kirrdvvg481lctkly27/MAR1_6_lecture.pdf?rlkey=vt03u9pzbsz99m49nqbxmme82&amp;dl=0">6</a></p>
+<a href="https://www.dropbox.com/scl/fi/26kirrdvvg481lctkly27/MAR1_6_lecture.pdf?rlkey=vt03u9pzbsz99m49nqbxmme82&amp;dl=0">6</a>
+<a href="https://www.dropbox.com/scl/fi/vrpsqtux3v7d8ql8awgc3/MAR1_7_lecture.pdf?rlkey=nxl3mg5awv8270ajyb7de2728&amp;dl=0">7</a></p>
 <p>R z prednášky: <a href="https://www.dropbox.com/scl/fi/vddxdof05wq9pl5flpecu/1.R?rlkey=sc7gcvxxfzmaxwjredlpypmo3&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/4wzlwuufkqhu6y6ghy55b/2.R?rlkey=sxmblirgxnbd4c9to99nvq554&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/7pwtte44dgcu8lsbrqs7z/3.R?rlkey=pf023bu35arzfe81kd6z8xzf4&amp;dl=0">3</a>
 <a href="https://www.dropbox.com/scl/fi/jclzordcrrpckjf5bjqsi/4-5.R?rlkey=e8qzgd9an96gab77t60iwrqws&amp;dl=0">4</a>
 <a href="https://www.dropbox.com/scl/fi/6r6yog8bw6txrrdllhpur/6diagnostics.R?rlkey=mfc84blaspbcru690tnp384o0&amp;dl=0">5</a>
-<a href="https://www.dropbox.com/scl/fi/sp17cwmbta0pd8ipeemwv/7predictors.R?rlkey=w93c4vmc6lk4ik0z97xakxt63&amp;dl=0">6</a></p>
+<a href="https://www.dropbox.com/scl/fi/sp17cwmbta0pd8ipeemwv/7predictors.R?rlkey=w93c4vmc6lk4ik0z97xakxt63&amp;dl=0">6</a>
+<a href="https://www.dropbox.com/scl/fi/zmlck60c183m8smjthkib/8errors.R?rlkey=3qs196wmvrcy6jgrpb3x2xum0&amp;dl=0">7</a></p>
 <p>R cvičenia (teoretické): <a href="https://www.dropbox.com/scl/fi/nbnmat5fybn9y4zme3lwt/Cv1_LL_2025.R?rlkey=2ywsqy3a4xbbziv73e7b9nv5f&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/dpbw36a27fizewfzd9vr3/Cv2_LL_2025.R?rlkey=deov8n72oy7yhb8wvjrca55r7&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/o3yxbw483amn2p6l44di1/Cv3_LL_2025.R?rlkey=8jgh6z6o1hlhh01c98cicvjt2&amp;dl=0">3</a>
 <a href="https://www.dropbox.com/scl/fi/mexljsm2foi8tf52o9pq6/Cv4_LL_2025.R?rlkey=xlvt8ts80i646ix4021bb0yom&amp;dl=0">4</a>
 <a href="https://www.dropbox.com/scl/fi/ggxni1lc71qphw9pn7a4m/Cv5_LL_2025.R?rlkey=ohek3touxwab1s1fldikfl428&amp;dl=0">5</a>
-<a href="https://www.dropbox.com/scl/fi/6mtf653snzwt0v1v5flt7/Cv6_LL.R?rlkey=ponqhyu29yu4ofvrlfhs8whfi&amp;dl=0">6</a></p>
+<a href="https://www.dropbox.com/scl/fi/6mtf653snzwt0v1v5flt7/Cv6_LL.R?rlkey=ponqhyu29yu4ofvrlfhs8whfi&amp;dl=0">6</a>
+<a href="https://www.dropbox.com/scl/fi/qg6zo3nc8pzdyzijxjvll/Cv7_LL.R?rlkey=xqpdfr48p65wi8qzs30z41xpi&amp;dl=0">7</a></p>
 <p>R cvičenia (praktické): <a href="https://www.dropbox.com/scl/fi/dnfbpb2d3aufv7s6wq4a5/Ex1_Tutorial-Vizualizacia.R?rlkey=6n9ecepa0b0cn0u1jorwuwqwj&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/64uert1oipdthmig2kfh4/Ex2_Odhadovanie.R?rlkey=qbs12obgxhipfgrn9b2mzca8y&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/gh2qtvtul8h4ahxgufkjx/Ex3_Inferencia.R?rlkey=jb92xentxwx8jafe2t7jkv18u&amp;dl=0">3</a>
 <a href="https://www.dropbox.com/scl/fi/a9s9hkta7x8t3f08s07cg/Ex4_PredVysvetl.R?rlkey=vospw1yv2kj59z5vsgwsagbrc&amp;dl=0">4</a>
 <a href="https://www.dropbox.com/scl/fi/cto1cf990tk7j8hrfovtn/Ex5_Diagnostics.R?rlkey=3u44u9ckupcpsm2iu6by1lwm2&amp;dl=0">5</a>
-<a href="https://www.dropbox.com/scl/fi/4nintc2z92n3bnh8es7nu/Ex6_Predictors.R?rlkey=1r1n0hd2b0so5z3y9u54051r9&amp;dl=0">6</a></p>
+<a href="https://www.dropbox.com/scl/fi/4nintc2z92n3bnh8es7nu/Ex6_Predictors.R?rlkey=1r1n0hd2b0so5z3y9u54051r9&amp;dl=0">6</a>
+<a href="https://www.dropbox.com/scl/fi/tcab3l4xct27l49i4ubie/Ex7_GLSrobust.R?rlkey=83scr3ph2zrdf0jp0jh9e3fd2&amp;dl=0">7</a></p>
 <p>Domáce úlohy: <a href="https://www.dropbox.com/scl/fi/rc3ccksvvyd0jnoiycrmh/2025_DU1.pdf?rlkey=3pr7h2tv2jqc2vlnbl74qv9bg&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/q90j2mnzuvxyqdlo3vzuf/2025_DU2.pdf?rlkey=g1jehv536yaw7nit7mbsmczvq&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/o9ojg0k4vnjtewwp9njex/2025_DU3.pdf?rlkey=12l4no49mymm9anjhf2n8lhrp&amp;dl=0">3</a></p>
@@ -412,12 +416,9 @@ to mean simulácia</a></li>
 neexperimentálnych dát</a></li>
 <li><a href="https://www.dropbox.com/scl/fi/sq70no6sn1txvydsq7dyp/Interpretacia-koeficientov-priklad.R?rlkey=ah853boodu9kh8yg81o36062c&amp;dl=0">interpretácia
 parametrov</a></li>
+<li><a href="http://lukaslaffers.github.io/files/volby2013_raw.RData">volebné
+dáta</a></li>
 </ul>
-</div>
-<div id="odovzdávadlo" class="section level3">
-<h3>Odovzdávadlo</h3>
-<p><a href="https://www.dropbox.com/request/utFWgckwkb9rpuwzAcaA">R
-subor nahrajte sem</a> ak to nepôjde, tak <a href="https://umbsk-my.sharepoint.com/:f:/g/personal/llaffers_umb_sk/EhjNFmfux21DrYwf8Px5L_MBlGnYGQXH_fPmmFsdsbbuQA">sem</a></p>
 </div>
 <div id="rozvrh" class="section level3">
 <h3>Rozvrh</h3>
