--- a/_pages/misc.html
+++ b/_pages/misc.html
@@ -356,15 +356,14 @@ display: none;
 <h1>Misc</h1>
 <ul>
 <li>Our department - Web: <a href="https://www.umbmath.sk">www.umbmath.sk</a>, Facebook: <a href="https://www.facebook.com/UMBmath"><span class="citation">@UMBmath</span></a>, Instagram: <a href="https://www.instagram.com/umbmath/">#UMBmath</a></li>
-<li><span class="math display">\[in Slovak\]</span> rozhovor v Rádiu
-Slovensko: <a href="https://slovensko.stvr.sk/rubriky/aktualne-rubriky/doma-je-doma/398660/doma-je-doma-lukas-laffers">Doma
+<li>[in Slovak] rozhovor v Rádiu Slovensko: <a href="https://slovensko.stvr.sk/rubriky/aktualne-rubriky/doma-je-doma/398660/doma-je-doma-lukas-laffers">Doma
 je doma</a></li>
 </ul>
 </div>
 <div id="in-slovak-popularizačné-prednášky" class="section level1">
-<h1><span class="math display">\[in Slovak\]</span> Popularizačné
-prednášky</h1>
+<h1>[in Slovak] Popularizačné prednášky</h1>
 <ul>
+<li>Ako Google určuje dôležitosť webstránok (2025, <a href="https://lukaslaffers.github.io/files/DOD_2025.pdf">slides</a>)</li>
 <li>Matematika mnohorozmerných dát (2025, <a href="https://youtu.be/ZHWgP2VScbY">video</a>, <a href="https://lukaslaffers.github.io/files/DOD_2025a.pdf">slides</a>)</li>
 <li>Vedatour: Kauzalita a metódy strojového učenia (2024, <a href="https://youtu.be/8vxUaDQ179Y?si=bujmmUXP1f-aiaX4">video</a>, <a href="https://lukaslaffers.github.io/files/Vedatour_2024_handout.pdf">slides</a>)</li>
 <li>Stratení v náhodnom lese. Príbeh o jednom machine-learningovom
@@ -375,7 +374,6 @@ slides</a>, <a href="https://lukaslaffers.github.io/files/ESCupd15dec.pdf">2023
 lides</a>)</li>
 <li>Prečo študovať matematiku (2023, <a href="https://www.youtube.com/watch?list=PL-MRd_-k_6x3YIFTVIUxDJlMTnhaWcldw&amp;v=quZoaCJgID0">video</a>,
 <a href="https://lukaslaffers.github.io/files/preco_math_2023.pdf">slides</a>)</li>
-<li>Ako Google určuje dôležitosť webstránok (2022, <a href="https://lukaslaffers.github.io/files/KGSM_2022_1.pdf">slides</a>)</li>
 <li>Ako súvisia matice s komprimovaním obrázkov (2022, <a href="https://lukaslaffers.github.io/files/KGSM_2022_2.pdf">slides</a>)</li>
 <li>Raketoplán Challenger, dalo sa zabrániť katastrofe? (2021, <a href="https://www.youtube.com/watch?v=DZoa4F0aZpM">video</a>, <a href="https://lukaslaffers.github.io/files/PriDen_umb_Laffers_2021.pdf">slides</a>)</li>
 <li>Vedatour: O kauzalite z neexperimentálnych dát (2019, <a href="https://www.youtube.com/watch?v=YwT0JCvRSaU">video</a>)</li>
