--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -418,6 +418,8 @@ neexperimentálnych dát</a></li>
 parametrov</a></li>
 <li><a href="http://lukaslaffers.github.io/files/volby2013_raw.RData">volebné
 dáta</a></li>
+<li><a href="https://www.dropbox.com/scl/fi/3rbs5eazk4hruoovxsp7b/volby2013_raw.RData?rlkey=6ozgrnrpfjyi7vvvc8n75m7ig&amp;dl=0">volebné
+dáta 2</a></li>
 </ul>
 </div>
 <div id="rozvrh" class="section level3">
