--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -405,7 +405,9 @@ intergrály</a></p></li>
 </ul>
 <p>Domáce úlohy: <a href="http://lukaslaffers.github.io/files/1%20exercise_2025.pdf">1</a>
 <a href="http://lukaslaffers.github.io/files/2%20exercise_2025.pdf">2</a>
-<a href="http://lukaslaffers.github.io/files/3%20exercise_2025.pdf">3</a></p>
+<a href="http://lukaslaffers.github.io/files/3%20exercise_2025.pdf">3</a>
+<a href="http://lukaslaffers.github.io/files/4%20exercise_2025.pdf">4</a>
+<a href="http://lukaslaffers.github.io/files/4%20exercise_2025.pdf">5</a></p>
 <p>Iné:</p>
 <p>15oct: <a href="https://www.dropbox.com/scl/fi/k8h5otpb5el39h9c59jph/stoch_15oct2025.pdf?rlkey=s3pum3y6menbs9zprevxlq9ro&amp;dl=0">tabuľa</a>,
 <a href="https://youtu.be/Ennt00MpCRI">záznam</a></p>
