--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -413,6 +413,8 @@ intergrály</a></p></li>
 <a href="https://youtu.be/Ennt00MpCRI">záznam</a></p>
 <p>22oct: <a href="https://www.dropbox.com/scl/fi/cw3fxo7zfb51o7gcbgogg/stoch_22oct2025.pdf?rlkey=jowelr25rseujots4kxcs4vrm&amp;dl=0">tabuľa</a>,
 <a href="https://youtu.be/ta28Pl55RaE">záznam</a></p>
+<p><a href="http://lukaslaffers.github.io/files/danish_fire_data.pdf">Dánske
+požiare</a></p>
 </div>
 <div id="odporúčaná-literatúra" class="section level3">
 <h3>Odporúčaná literatúra</h3>
