--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -442,8 +442,8 @@ Measure</em>. Wiley, 2008.</p>
 stochastického procesu [R: ch10]<br />
 </li>
 <li><strong>Diskrétne Markovove reťazce</strong> – definícia, stavový
-priestor, príklady (matica kreditného skóre), rekurentné a tranzientné
-reťazce, ireducibilita, stacionárne rozdelenia a konvergencia,
+priestor, príklady (matica kreditného skóre), rekurentné a prechodové
+reťazce, neredukovateľnosť, stacionárne rozdelenia a konvergencia,
 periodické reťazce, MCMC algoritmus (Metropolis-Hastings, Gibbs),
 príklad Google PageRank [R: ch8, K, ER: ch11]<br />
 </li>
@@ -452,10 +452,10 @@ proces, limitná definícia, vlastnosti, homogénny a nehomogénny PP,
 alternatívne definície, paradox inšpekcie, rozdelenie medzičasov,
 usporiadané štatistiky, príklad dánskych požiarov [M: ch1–2]<br />
 </li>
-<li><strong>Martingaly</strong> – podmienené očakávanie, martingal,
-sub/supermartingal, zastavovací čas, vetu o voliteľnom výbere, príklady,
+<li><strong>Martingaly</strong> – podmienená stredná hodnota, martingal,
+sub/supermartingal, čas zastavenia, optional sampling theorem, príklady,
 Waldova veta, veta o konvergencii martingalu, Upcrossing lemma,
-maximálna nerovnosť, centrálna limitná veta (bez dôkazu) [R: ch14]<br />
+maximálna nerovnosť [R: ch14]<br />
 </li>
 <li><strong>Všeobecné stochastické procesy</strong> – Kolmogorovova veta
 o existencii, Markovove reťazce na všeobecnom stavovom priestore,
