--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -407,7 +407,8 @@ intergrály</a></p></li>
 <a href="http://lukaslaffers.github.io/files/2%20exercise_2025.pdf">2</a>
 <a href="http://lukaslaffers.github.io/files/3%20exercise_2025.pdf">3</a>
 <a href="http://lukaslaffers.github.io/files/4%20exercise_2025.pdf">4</a>
-<a href="http://lukaslaffers.github.io/files/5%20exercise_2025.pdf">5</a></p>
+<a href="http://lukaslaffers.github.io/files/5%20exercise_2025.pdf">5</a>
+<a href="http://lukaslaffers.github.io/files/6%20exercise_2025.pdf">6</a></p>
 <p>Iné:</p>
 <p>15oct: <a href="https://www.dropbox.com/scl/fi/k8h5otpb5el39h9c59jph/stoch_15oct2025.pdf?rlkey=s3pum3y6menbs9zprevxlq9ro&amp;dl=0">tabuľa</a>,
 <a href="https://youtu.be/Ennt00MpCRI">záznam</a></p>
