--- a/_pages/presentations.html
+++ b/_pages/presentations.html
@@ -356,7 +356,9 @@ display: none;
 <h1>Presentations</h1>
 <ul>
 <li>2025: JRC - European Commision (Ispra), VŠE (Prague), MIER in
-Smolenice, University of St. Gallen, SEAM Nitra</li>
+Smolenice, University of St. Gallen, SEAM Nitra, Matej Bel University,
+<a href="http://lukaslaffers.github.io/files/jasna.pdf">KSM
+Jasná</a></li>
 <li>2024: SEAM Bratislava, <a href="http://lukaslaffers.github.io/files/EALE_Laffers.pdf">EALE
 Bergen</a>, COMPIE Amsterdam, <a href="http://lukaslaffers.github.io/files/LL_probastat3.pdf">PROBASTAT
 Smolenice</a>, <a href="http://lukaslaffers.github.io/files/LL_main.pdf">MUNI Brno
@@ -366,9 +368,9 @@ Learning in program evaluation, high-dimensionality and visualization
 techniques in Luxembourg</a>, SEAM in Banská Bystrica, MUNI Brno</li>
 <li>2022: Meeting of the Institute of Economic Research (MIER) in
 Smolenice, Norwegian School of Economics, SEAM in Bratislava, Turku
-School of Economics (virtual), Charles University in Prague, <a href="http://lukaslaffers.github.io/files/DML_robust+copy.pdf">ROBUST
-(Czech Statistical Society meeting in Volyne)</a>, Annual Conference of
-the International Association for Applied Econometrics in London</li>
+School of Economics (virtual), Charles University in Prague, ROBUST
+(Czech Statistical Society meeting in Volyne), Annual Conference of the
+International Association for Applied Econometrics in London</li>
 <li>2021: Czech Economic Society Conference (virtual), COMPIE (virtual),
 Swiss Society of Economics and Statistics Congress (virtual), <a href="http://lukaslaffers.github.io/files/DML_selection_LL.pdf">NHH -
 Norwegian School of Economics</a>, SEAM in Nitra</li>
