--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -381,7 +381,7 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <a href="https://www.dropbox.com/scl/fi/vrpsqtux3v7d8ql8awgc3/MAR1_7_lecture.pdf?rlkey=nxl3mg5awv8270ajyb7de2728&amp;dl=0">7</a>
 <a href="https://www.dropbox.com/scl/fi/m8j244k8h9z1zr0irqkys/MAR1_8_lecture.pdf?rlkey=r4t9415vzr3szex7nhq9axg90&amp;dl=0">8</a>
 <a href="https://www.dropbox.com/scl/fi/isocwumron3nspmk2r1na/MAR1_9_lecture.pdf?rlkey=zevrkny32jc6gimdnnceytnt0&amp;dl=0">9</a>
-<a href="https://www.dropbox.com/scl/fi/n60jnj795xzmilg3svf5g/MAR1_10_lecture.pdf?rlkey=4it8bhh7cdom4gd3rsnvhn9lt&amp;dl=0">10</a></p>
+<a href="https://www.dropbox.com/scl/fi/wocgawgbfmgut16saghdh/MAR1_10_lecture.pdf?rlkey=wohbc35c7lp3u9u73pihj1knd&amp;dl=0">10</a></p>
 <p>R z prednášky: <a href="https://www.dropbox.com/scl/fi/vddxdof05wq9pl5flpecu/1.R?rlkey=sc7gcvxxfzmaxwjredlpypmo3&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/4wzlwuufkqhu6y6ghy55b/2.R?rlkey=sxmblirgxnbd4c9to99nvq554&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/7pwtte44dgcu8lsbrqs7z/3.R?rlkey=pf023bu35arzfe81kd6z8xzf4&amp;dl=0">3</a>
@@ -543,7 +543,7 @@ Výber modelu – spätná eliminácia, AIC, BIC, konzistentnosť
 vs. efektívnosť, príklady<br />
 [F: kap. 10, CH: kap. 2–4]</p></li>
 <li><p><strong>Téma 10</strong><br />
-Shrinkage – PCA, PLS, Ridge regresia, LASSO, krížová validácia<br />
+Shrinkage – PCA, Ridge regresia, LASSO, krížová validácia<br />
 [F: kap. 11, FHT: kap. 3–4, WHT]</p></li>
 <li><p><strong>Téma 11</strong><br />
 Kategorické prediktory – dvojúrovňový faktor, interakcie, viacúrovňové
