--- a/_pages/misc.html
+++ b/_pages/misc.html
@@ -363,6 +363,7 @@ je doma</a></li>
 <div id="in-slovak-popularizačné-prednášky" class="section level1">
 <h1>[in Slovak] Popularizačné prednášky</h1>
 <ul>
+<li>Vedatour: Ako vyhodnotiť zmenu politiky (2025, <a href="https://lukaslaffers.github.io/files/vedatour2025.pdf">slides</a>)</li>
 <li>Ako Google určuje dôležitosť webstránok (2025, <a href="https://lukaslaffers.github.io/files/DOD_2025.pdf">slides</a>)</li>
 <li>Matematika mnohorozmerných dát (2025, <a href="https://youtu.be/ZHWgP2VScbY">video</a>, <a href="https://lukaslaffers.github.io/files/DOD_2025a.pdf">slides</a>)</li>
 <li>Vedatour: Kauzalita a metódy strojového učenia (2024, <a href="https://youtu.be/8vxUaDQ179Y?si=bujmmUXP1f-aiaX4">video</a>, <a href="https://lukaslaffers.github.io/files/Vedatour_2024_handout.pdf">slides</a>)</li>
