--- a/_pages/misc.html
+++ b/_pages/misc.html
@@ -363,6 +363,8 @@ je doma</a></li>
 <div id="in-slovak-popularizačné-prednášky" class="section level1">
 <h1>[in Slovak] Popularizačné prednášky</h1>
 <ul>
+<li>Príprava na <a href="https://esc2026.statistics.sk">ESC</a> (slides:
+<a href="https://lukaslaffers.github.io/files/ESC_2025.pdf">2025</a>, <a href="https://lukaslaffers.github.io/files/ESC_2024.pdf">2024</a>, <a href="https://lukaslaffers.github.io/files/ESCupd15dec.pdf">2023</a>)</li>
 <li>Vedatour: Ako vyhodnotiť zmenu politiky (2025, <a href="https://lukaslaffers.github.io/files/vedatour2025.pdf">slides</a>)</li>
 <li>Ako Google určuje dôležitosť webstránok (2025, <a href="https://lukaslaffers.github.io/files/DOD_2025.pdf">slides</a>)</li>
 <li>Matematika mnohorozmerných dát (2025, <a href="https://youtu.be/ZHWgP2VScbY">video</a>, <a href="https://lukaslaffers.github.io/files/DOD_2025a.pdf">slides</a>)</li>
@@ -370,9 +372,6 @@ je doma</a></li>
 <li>Stratení v náhodnom lese. Príbeh o jednom machine-learningovom
 algoritme (2024, <a href="https://lukaslaffers.github.io/files/DOD_2024b.pdf">slides</a>)</li>
 <li>Štatistické paradoxy okolo nás (2024, <a href="https://lukaslaffers.github.io/files/DOD_2024_upd.pdf">slides</a>)</li>
-<li>Príprava na <a href="https://esc2024.statistics.sk">ESC</a> (<a href="https://lukaslaffers.github.io/files/ESC_2024.pdf">2024
-slides</a>, <a href="https://lukaslaffers.github.io/files/ESCupd15dec.pdf">2023
-lides</a>)</li>
 <li>Prečo študovať matematiku (2023, <a href="https://www.youtube.com/watch?list=PL-MRd_-k_6x3YIFTVIUxDJlMTnhaWcldw&amp;v=quZoaCJgID0">video</a>,
 <a href="https://lukaslaffers.github.io/files/preco_math_2023.pdf">slides</a>)</li>
 <li>Ako súvisia matice s komprimovaním obrázkov (2022, <a href="https://lukaslaffers.github.io/files/KGSM_2022_2.pdf">slides</a>)</li>
