--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -381,7 +381,10 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <a href="https://www.dropbox.com/scl/fi/vrpsqtux3v7d8ql8awgc3/MAR1_7_lecture.pdf?rlkey=nxl3mg5awv8270ajyb7de2728&amp;dl=0">7</a>
 <a href="https://www.dropbox.com/scl/fi/m8j244k8h9z1zr0irqkys/MAR1_8_lecture.pdf?rlkey=r4t9415vzr3szex7nhq9axg90&amp;dl=0">8</a>
 <a href="https://www.dropbox.com/scl/fi/vffsncr8773nsmv0t0hhx/MAR1_9_lecture.pdf?rlkey=6s9g55gc9ydl11mjp03bmadka&amp;dl=0">9</a>
-<a href="https://www.dropbox.com/scl/fi/1px4a810tyyr57gipdy90/MAR1_10_lecture.pdf?rlkey=636vvkmvw95hooj5qv4qytilk&amp;dl=0">10</a></p>
+<a href="https://www.dropbox.com/scl/fi/1px4a810tyyr57gipdy90/MAR1_10_lecture.pdf?rlkey=636vvkmvw95hooj5qv4qytilk&amp;dl=0">10</a>
+<a href="https://www.dropbox.com/scl/fi/jmca0316havn2alt7g1d7/MAR1_11_lecture.pdf?rlkey=t7e0v0d22h5pkxiqxzro1n0uj&amp;dl=0">11</a>
+<a href="https://www.dropbox.com/scl/fi/57nndyxvkywxxjqi9682k/presentations_2025.zip?rlkey=xefo4o6gzjia9c8o088m8q821&amp;dl=0">všetky
+slajdy</a></p>
 <p>R z prednášky: <a href="https://www.dropbox.com/scl/fi/vddxdof05wq9pl5flpecu/1.R?rlkey=sc7gcvxxfzmaxwjredlpypmo3&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/4wzlwuufkqhu6y6ghy55b/2.R?rlkey=sxmblirgxnbd4c9to99nvq554&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/7pwtte44dgcu8lsbrqs7z/3.R?rlkey=pf023bu35arzfe81kd6z8xzf4&amp;dl=0">3</a>
@@ -391,7 +394,10 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <a href="https://www.dropbox.com/scl/fi/zmlck60c183m8smjthkib/8errors.R?rlkey=3qs196wmvrcy6jgrpb3x2xum0&amp;dl=0">7</a>
 <a href="https://www.dropbox.com/scl/fi/1emxwmv4blt6cfbaams9s/9transformations.R?rlkey=rplgocp7qs4vi646n66uuw994&amp;dl=0">8</a>
 <a href="https://www.dropbox.com/scl/fi/fe1a7yyg4dutho2odlpqt/10model_selection.R?rlkey=jth9ffx9gx25xefpkck6qwrq4&amp;dl=0">9</a>
-<a href="https://www.dropbox.com/scl/fi/m104ywipwkrnak4wr1okd/11shrinkage.R?rlkey=xjeo1osfzbs40tyjqdbynbish&amp;dl=0">10</a></p>
+<a href="https://www.dropbox.com/scl/fi/m104ywipwkrnak4wr1okd/11shrinkage.R?rlkey=xjeo1osfzbs40tyjqdbynbish&amp;dl=0">10</a>
+<a href="https://www.dropbox.com/scl/fi/8nemut12kfqesnxw2qu0v/14categorical.R?rlkey=0l50snxn7yw4dfasnhf8a0p3a&amp;dl=0">11</a>
+<a href="https://www.dropbox.com/scl/fi/pmgd6zgpp2xdq4rgzls26/prednaskove_r_subory_2025.zip?rlkey=afz2ojw0socfnp258kswr5yan&amp;dl=0">všetky
+R súbory</a></p>
 <p>R cvičenia (teoretické): <a href="https://www.dropbox.com/scl/fi/nbnmat5fybn9y4zme3lwt/Cv1_LL_2025.R?rlkey=2ywsqy3a4xbbziv73e7b9nv5f&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/dpbw36a27fizewfzd9vr3/Cv2_LL_2025.R?rlkey=deov8n72oy7yhb8wvjrca55r7&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/o3yxbw483amn2p6l44di1/Cv3_LL_2025.R?rlkey=8jgh6z6o1hlhh01c98cicvjt2&amp;dl=0">3</a>
@@ -401,7 +407,10 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <a href="https://www.dropbox.com/scl/fi/qg6zo3nc8pzdyzijxjvll/Cv7_LL.R?rlkey=xqpdfr48p65wi8qzs30z41xpi&amp;dl=0">7</a>
 <a href="https://www.dropbox.com/scl/fi/pbhctbti653coew177ubi/Cv8_LL_2025.R?rlkey=uw6xyil0cg3x70bcx4rotrkw8&amp;dl=0">8</a>
 <a href="https://www.dropbox.com/scl/fi/kzuoazbdlx865f1mngkps/Cv9_LL.R?rlkey=wtgteh3g6kbirfi0ic5m8oaxd&amp;dl=0">9</a>
-<a href="https://www.dropbox.com/scl/fi/280494lt1belfnrau6qxk/CV10_LL.R?rlkey=mpya5vqjbnyxcy0xww43xufv9&amp;dl=0">10</a></p>
+<a href="https://www.dropbox.com/scl/fi/280494lt1belfnrau6qxk/CV10_LL.R?rlkey=mpya5vqjbnyxcy0xww43xufv9&amp;dl=0">10</a>
+<a href="https://www.dropbox.com/scl/fi/x9v0bwhlahwnael6ppfhv/Cv11_LL.R?rlkey=bhronpdexqesvyap72z5y9ehj&amp;dl=0">11</a>
+<a href="https://www.dropbox.com/scl/fi/e3gvj3u5o8os271zvfd0e/teoreticke_riesenia_2025.zip?rlkey=98hgt0xvfev380jn7uceeu00j&amp;dl=0">všetky
+riešenia</a></p>
 <p>R cvičenia (praktické): <a href="https://www.dropbox.com/scl/fi/dnfbpb2d3aufv7s6wq4a5/Ex1_Tutorial-Vizualizacia.R?rlkey=6n9ecepa0b0cn0u1jorwuwqwj&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/64uert1oipdthmig2kfh4/Ex2_Odhadovanie.R?rlkey=qbs12obgxhipfgrn9b2mzca8y&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/gh2qtvtul8h4ahxgufkjx/Ex3_Inferencia.R?rlkey=jb92xentxwx8jafe2t7jkv18u&amp;dl=0">3</a>
@@ -411,7 +420,10 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <a href="https://www.dropbox.com/scl/fi/tcab3l4xct27l49i4ubie/Ex7_GLSrobust.R?rlkey=83scr3ph2zrdf0jp0jh9e3fd2&amp;dl=0">7</a>
 <a href="https://www.dropbox.com/scl/fi/1dghu8wy3ekhv3w70pctx/Ex8_Transformacie.R?rlkey=cksishen03pmbl01egpi7w0z4&amp;dl=0">8</a>
 <a href="https://www.dropbox.com/scl/fi/ylqt4v8qm0cdhcqitbel1/Ex9_ModelSelect.R?rlkey=ul53co9cj7ejtl5p6mz1rse5e&amp;dl=0">9</a>
-<a href="https://www.dropbox.com/scl/fi/lsmtlse9dzcevcnn0yf5t/Ex10_Shrinkage.R?rlkey=kaw7v4n1fk1gxams027bcozxk&amp;dl=0">10</a></p>
+<a href="https://www.dropbox.com/scl/fi/lsmtlse9dzcevcnn0yf5t/Ex10_Shrinkage.R?rlkey=kaw7v4n1fk1gxams027bcozxk&amp;dl=0">10</a>
+<a href="https://www.dropbox.com/scl/fi/87uylsvnam4rhvad0l5u2/Ex11_KategorPred.R?rlkey=za43n57pcm8al7sqylp8rfgwz&amp;dl=0">11</a>
+<a href="https://www.dropbox.com/scl/fi/h5aj1fwb179dzmd2vso39/prakticke_riesenia_2025.zip?rlkey=2lm5gp4e8r89w798pl96pcclx&amp;dl=0">všetky
+riešenia</a></p>
 <p>Domáce úlohy: <a href="https://www.dropbox.com/scl/fi/rc3ccksvvyd0jnoiycrmh/2025_DU1.pdf?rlkey=3pr7h2tv2jqc2vlnbl74qv9bg&amp;dl=0">1</a>
 <a href="https://www.dropbox.com/scl/fi/q90j2mnzuvxyqdlo3vzuf/2025_DU2.pdf?rlkey=g1jehv536yaw7nit7mbsmczvq&amp;dl=0">2</a>
 <a href="https://www.dropbox.com/scl/fi/o9ojg0k4vnjtewwp9njex/2025_DU3.pdf?rlkey=12l4no49mymm9anjhf2n8lhrp&amp;dl=0">3</a>
