--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -416,6 +416,10 @@ intergrály</a></p></li>
 <a href="https://youtu.be/ta28Pl55RaE">záznam</a></p>
 <p><a href="http://lukaslaffers.github.io/files/danish_fire_data.pdf">Dánske
 požiare</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/wde258lwyodldch3s3dka/otazky_na_skusku_stoch.pdf?rlkey=m3d1wlaw0m3kh8acf1g1x3u98&amp;dl=0">skúškové
+okruhy</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/h2f4nr2zq0zzvi87nbygi/stoch_cvicna_skuska.pdf?rlkey=aobvxzadu7dasahvwet3n2snb&amp;dl=0">cvičná
+skúška</a></p>
 </div>
 <div id="odporúčaná-literatúra" class="section level3">
 <h3>Odporúčaná literatúra</h3>
@@ -456,12 +460,13 @@ usporiadané štatistiky, príklad dánskych požiarov [M: ch1–2]<br />
 <li><strong>Martingaly</strong> – podmienená stredná hodnota, martingal,
 sub/supermartingal, čas zastavenia, optional sampling theorem, príklady,
 Waldova veta, veta o konvergencii martingalu, Upcrossing lemma,
-maximálna nerovnosť [R: ch14]<br />
+<del>maximálna nerovnosť</del> [R: ch14]<br />
 </li>
-<li><strong>Všeobecné stochastické procesy</strong> – Kolmogorovova veta
-o existencii, Markovove reťazce na všeobecnom stavovom priestore,
-stacionárne rozdelenia, kontinuálny čas, generátor, reverzibilita,
-Brownov pohyb – definícia, vlastnosti, existencia [R: ch15]</li>
+<li><strong>Všeobecné stochastické procesy</strong> – <del>Kolmogorovova
+veta o existencii, Markovove reťazce na všeobecnom stavovom priestore,
+stacionárne rozdelenia, kontinuálny čas, generátor, reverzibilita,</del>
+Brownov pohyb – definícia, vlastnosti, <del>existencia</del> [R:
+ch15]</li>
 </ul>
 <p>Cvičenia vychádzajú najmä z úloh na konci kapitol v [R].</p>
 </div>
