--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -370,6 +370,10 @@ väzbu. Odporúčam Vám zaobstarať si aj fyzickú kópiu knihy, druhé vydanie
 postačí.</p>
 <p>Webstránka <a href="http://lukaslaffers.github.io/linreg1" class="uri">http://lukaslaffers.github.io/linreg1</a> bude obsahovať
 všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
+<div id="skúška" class="section level3">
+<h3>Skúška</h3>
+<p>12.1.2026 o 9:00 v F237</p>
+</div>
 <div id="súbory" class="section level3">
 <h3>Súbory</h3>
 <p>Slajdy: <a href="https://www.dropbox.com/scl/fi/eansoxj03u6dzn5sniya9/MAR1_1_lecture.pdf?rlkey=u5ocrwdfjzq0ig8hrgquii60k&amp;dl=0">1</a>
