--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -383,6 +383,10 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <li>Passcode: VEX6Mm</li>
 </ul>
 </div>
+<div id="skúška" class="section level3">
+<h3>Skúška</h3>
+<p>5.1.2026 o 9:00 v F225</p>
+</div>
 <div id="súbory" class="section level3">
 <h3>Súbory</h3>
 <p>Poznámky:</p>
