--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -370,6 +370,12 @@ väzbu. Odporúčam Vám zaobstarať si aj fyzickú kópiu knihy, druhé vydanie
 postačí.</p>
 <p>Webstránka <a href="http://lukaslaffers.github.io/linreg1" class="uri">http://lukaslaffers.github.io/linreg1</a> bude obsahovať
 všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
+<div id="priebežná-skúška" class="section level3">
+<h3>Priebežná skúška</h3>
+<p><a href="https://www.dropbox.com/scl/fi/i63oergf9uw2l74vobm8o/druha_prieb_2025.R?rlkey=i1yqg1bj4fo4hmldiqxqqslv5&amp;dl=0">R
+súbor</a></p>
+<p><a href="https://www.dropbox.com/request/3iO6lyrfL400UsvGGQfZ">odovzdávadlo</a></p>
+</div>
 <div id="skúška" class="section level3">
 <h3>Skúška</h3>
 <p>12.1.2026 o 9:00 v F237</p>
