--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -372,7 +372,8 @@ postačí.</p>
 všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <div id="skúška" class="section level3">
 <h3>Skúška</h3>
-<p>7.1.2026 o 9:00 v F237</p>
+<p><del>7.1.2026 o 9:00 v F237</del></p>
+<p>12.1.2026 o 9:00 v F237</p>
 </div>
 <div id="súbory" class="section level3">
 <h3>Súbory</h3>
