--- a/_pages/stoch.html
+++ b/_pages/stoch.html
@@ -385,7 +385,8 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 </div>
 <div id="skúška" class="section level3">
 <h3>Skúška</h3>
-<p>5.1.2026 o 9:00 v F225</p>
+<p><del>5.1.2026 o 9:00 v F225</del></p>
+<p>15.1.2026 o 9:00 v F225</p>
 </div>
 <div id="súbory" class="section level3">
 <h3>Súbory</h3>
