--- a/_pages/linreg1.html
+++ b/_pages/linreg1.html
@@ -374,6 +374,7 @@ všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
 <h3>Skúška</h3>
 <p><del>7.1.2026 o 9:00 v F237</del></p>
 <p>12.1.2026 o 9:00 v F237</p>
+<p><a href="https://www.dropbox.com/request/qZG2F7YHTNk0y6E07D53">odovzdávadlo</a></p>
 </div>
 <div id="súbory" class="section level3">
 <h3>Súbory</h3>
@@ -545,12 +546,10 @@ Cookova štatistika, parciálna regresia<br />
 <li><p><strong>Téma 6</strong> Kolinearita: faktor nafúknutia rozptylu
 (VIF), praktické problémy, chyby v prediktoroch, zmena mierky, GLS,
 testovanie nedostatočnej zhody, robustná regresia<br />
-[F: kap. 7–8]</p>
-<ul>
-<li><strong>Téma 7</strong> Problémy s chybami. Zovšeobecnený lineárny
-model, heteroskedasticita, robustné variatny regresie.<br />
-[F: kap. 7–8]</li>
-</ul></li>
+[F: kap. 7–8]</p></li>
+<li><p><strong>Téma 7</strong> Problémy s chybami. Zovšeobecnený
+lineárny model, heteroskedasticita, robustné variatny regresie.<br />
+[F: kap. 7–8]</p></li>
 <li><p><strong>Téma 8</strong><br />
 Transformácie – Box–Coxova transformácia, transformácia prediktorov,
 broken stick regresia, polynómy<br />
