--- a/_pages/presentations.html
+++ b/_pages/presentations.html
@@ -357,8 +357,7 @@ display: none;
 <ul>
 <li>2025: JRC - European Commision (Ispra), VŠE (Prague), MIER in
 Smolenice, University of St. Gallen, SEAM Nitra, Matej Bel University,
-<a href="http://lukaslaffers.github.io/files/jasna.pdf">KSM
-Jasná</a></li>
+Konferencia Slovenských Matematikov (Jasná)</li>
 <li>2024: SEAM Bratislava, <a href="http://lukaslaffers.github.io/files/EALE_Laffers.pdf">EALE
 Bergen</a>, COMPIE Amsterdam, <a href="http://lukaslaffers.github.io/files/LL_probastat3.pdf">PROBASTAT
 Smolenice</a>, <a href="http://lukaslaffers.github.io/files/LL_main.pdf">MUNI Brno
