--- a/_pages/research.html
+++ b/_pages/research.html
@@ -364,6 +364,10 @@ implemented in
 <li>R - <a href="https://cran.r-project.org/web/packages/causalweight/index.html"><code>testmedident</code>
 in causalweight</a> package.</li>
 </ul></li>
+<li>Testing Full Mediation of Treatment Effects and the Identifiability
+of Causal Mechanisms (with <a href="http://www.unifr.ch/appecon/en/team/martin-huber/">Martin
+Huber</a> and <a href="https://kevinkloiber.github.io">Kevin
+Kloiber</a>)</li>
 <li>Mothers’ Job Search after Childbirth and Earnings (with <a href="https://sites.google.com/site/bernhardecon/">Bernhard
 Schmidpeter</a>, <a href="http://lukaslaffers.github.io/files/Mothers_May2025.pdf">(May
 2025)</a>, <a href="http://lukaslaffers.github.io/files/mothers_presentation.pdf">slides</a>)</li>
@@ -499,13 +503,15 @@ code</a>)</li>
 <div id="grants" class="section level1">
 <h1>Grants</h1>
 <ul>
-<li><strong>VEGA 1/0398/23</strong> — Causality and machine learning in
-econometric models (principal investigator, 2023—ongoing)</li>
+<li><strong>VEGA 1/0645/26</strong> — Causal inference in econometric
+models (principal investigator, 2026—2028)</li>
 <li><strong>APVV-21-0360</strong> — Applying machine learning methods to
-support labour market policy making (2022—ongoing)</li>
+support labour market policy making (2022—2026)</li>
 <li><strong>COST-CA21163</strong> — Text, functional and other
 high-dimensional data in econometrics: New models, methods, applications
 (member of MC for Slovakia)</li>
+<li><strong>VEGA 1/0398/23</strong> — Causality and machine learning in
+econometric models (principal investigator, 2023—2025)</li>
 <li><strong>VEGA 1/0692/20</strong> — Sensitivity analysis in
 econometric models (principal investigator, project chosen among those
 that achieved high significance. 2020—2022)</li>
@@ -539,12 +545,13 @@ Resources, Economics Letters, Empirical Economics, Advances in
 Statistical Analysis, Journal of Econometric Methods, European Journal
 of Operations Research, Journal of Environmental Economics and
 Management, Research in Statistics, Journal of Statistical Computation
-and Simulation, Journal of Data Science, Applied Economics, Ekonomický
-Časopis</li>
+and Simulation, Statistical Methods in Medical Research, Journal of Data
+Science, Applied Economics, Ekonomický Časopis</li>
 <li>Social Policy Institute (SVK), Institute for Healthcare Analyses
 (SVK), VEGA grant scheme (SVK), Luxembourg National Research Fund,
 Riksbankens jubileumsfond</li>
-<li>PhD committee: CERGE-EI, Comenius University</li>
+<li>PhD committee: University of St. Gallen, CERGE-EI, Comenius
+University</li>
 </ul>
 </div>
 
