--- a/_pages/teach.html
+++ b/_pages/teach.html
@@ -379,6 +379,12 @@ regresia 2</a></li>
 <div id="courses" class="section level1">
 <h1>Courses</h1>
 <ul>
+<li><p>Regression Analysis 2 (Fall 2016-2023, 2026 in Slovak,
+UMB)</p></li>
+<li><p>Probability Theory 1 (Spring 2014, 2016, 2018-2023, 2026 in
+Slovak, UMB)</p></li>
+<li><p>Probability and Statistics 1 (Spring 2022-2026 in Slovak,
+UMB)</p></li>
 <li><p>Econometrics (Fall 2021-2025, PhD course, MUNI)</p></li>
 <li><p>Optimisation and Microeconomic Theory (Fall 2014, 2018-2025,
 Master, NHH)</p></li>
@@ -387,11 +393,6 @@ UMB)</p></li>
 <li><p>Stochastic Processes (Fall 2015-2018, 2020-2025 in Slovak,
 UMB)</p></li>
 <li><p>Probability and Statistics 2 (Fall 2021-2025 in Slovak,
-UMB)</p></li>
-<li><p>Regression Analysis 2 (Fall 2016-2023 in Slovak, UMB)</p></li>
-<li><p>Probability Theory 1 (Spring 2014, 2016, 2018-2023, in Slovak,
-UMB)</p></li>
-<li><p>Probability and Statistics 1 (Spring 2022-2025 in Slovak,
 UMB)</p></li>
 <li><p>Computation and Simulation in R 3 (Spring 2018-2021, 2023, in
 Slovak, UMB)</p></li>
