--- a/_pages/about.html
+++ b/_pages/about.html
@@ -366,8 +366,8 @@ professor of Economics</a> (docent) by <a href="https://www.econ.muni.cz/en">Mas
 <p>My research interests lie mainly within the areas of econometrics,
 causal inference, and labor economics. I have also experience in working
 with and analyzing medical data for research.</p>
-<p>My CV can be found <a href="https://lukaslaffers.github.io/files/CV_Laffers_eng.pdf">here</a>
-(Dec 2024).</p>
+<p>My CV can be found <a href="https://lukaslaffers.github.io/files/CV_Laffers_feb2026_eng.pdf">here</a>
+(Feb 2025).</p>
 </div>
 
 
