--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -356,7 +356,7 @@ display: none;
 <h1>Lineárna regresia 2</h1>
 <div id="konzultačné-hodiny" class="section level3">
 <h3>Konzultačné hodiny</h3>
-<p>Podľa dohody. Ste srdečne vítaní (<strong>naozaj</strong>)!</p>
+<p>Podľa dohody. Ste srdečne vítaní (<strong>naozaj</strong>)! A</p>
 </div>
 <div id="hodnotenie" class="section level3">
 <h3>Hodnotenie</h3>
