--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -371,8 +371,12 @@ Tento text je písaný veľmi koncentrovane a je len pomôckou, silne
 odporúčam čítať originálne zdroje.</p>
 <p>Webstránka <a href="http://lukaslaffers.github.io/linreg2" class="uri">http://lukaslaffers.github.io/linreg2</a> bude obsahovať
 všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
-<p>R z prednášky: (ELM prvé vydanie)[<a href="https://julianfaraway.github.io/faraway/ELM/scripts/" class="uri">https://julianfaraway.github.io/faraway/ELM/scripts/</a>]
-(ELM druhé vydanie)[<a href="https://julianfaraway.github.io/faraway/ELM/toc2.html" class="uri">https://julianfaraway.github.io/faraway/ELM/toc2.html</a>]</p>
+<p>R z prednášky: <a href="https://julianfaraway.github.io/faraway/ELM/scripts/">ELM prvé
+vydanie</a> <a href="https://julianfaraway.github.io/faraway/ELM/toc2.html">ELM druhé
+vydanie</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/ydjb706jnvqg7ts1pvfmh/introlm.R?rlkey=i82or4a6ltlfecp7v5w0kxlmw&amp;dl=0">Úvod
+a zhrnutie LMwR na príklade volebných dát z US štátu Georgia v
+2000</a></p>
 <p>R cvičenia:</p>
 <p>Domáce úlohy:</p>
 <p>Misc:</p>
