--- a/_pages/research.html
+++ b/_pages/research.html
@@ -385,7 +385,11 @@ Principe</a>, <a href="https://edworkingpapers.com/ai24-1088">Ed
 WP</a>)</li>
 <li>Correcting for Nonignorable Nonresponse Bias in Ordinal
 Observational Survey Data (with <a href="https://jozefmichalmintal.com">Jozef Michal Mintal</a> and Ivan
-Sutoris, <a href="http://arxiv.org/abs/2602.07704">ArXiv WP</a>, <a href="http://lukaslaffers.github.io/files/presentation_LL_SEAM.pdf">slides</a>)</li>
+Sutoris, <a href="http://arxiv.org/abs/2602.07704">arXiv:2602.07704</a>,
+<a href="http://lukaslaffers.github.io/files/presentation_LL_SEAM.pdf">slides</a>)
+<ul>
+<li>R - <a href="https://github.com/LukasLaffers/vrpoprob">vrpoprob</a>.</li>
+</ul></li>
 <li>Treatment Effects for Discrete Misreported Outcomes (under
 Endogeneity) (with <a href="https://sites.google.com/view/daniel-gutknecht/home">Daniel
 Gutknecht</a> and <a href="https://sites.google.com/site/giovannimellace/">Giovanni
