--- a/_pages/research.html
+++ b/_pages/research.html
@@ -381,8 +381,8 @@ WP</a>)</li>
 <li>Causal Mechanisms of Relative Age Effects on Adolescent Risky
 Behaviours (with <a href="https://sites.google.com/site/lucafumarco/home">Luca Fumarco</a>
 and <a href="https://sites.google.com/view/principefrancesco/">Francesco
-Principe</a>, <a href="https://edworkingpapers.com/ai24-1088">Ed
-WP</a>)</li>
+Principe</a>, <a href="https://www.york.ac.uk/economics/hedg/wps/wp2026/">HEDG WP
+26/01</a>)</li>
 <li>Correcting for Nonignorable Nonresponse Bias in Ordinal
 Observational Survey Data (with <a href="https://jozefmichalmintal.com">Jozef Michal Mintal</a> and Ivan
 Sutoris, <a href="http://arxiv.org/abs/2602.07704">arXiv:2602.07704</a>,
