--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -355,144 +355,137 @@ display: none;
 <div id="lineárna-regresia-2" class="section level1">
 <h1>Lineárna regresia 2</h1>
 <p>Tento kurz je pokračovaním kurzu lineárnej regresie 1. Kým v
-predošlom kurze sme si dopodrobna rozobrali základný nájstroj - metódu
+predošlom kurze sme si dopodrobna rozobrali základný nástroj - metódu
 najmenších štvorcov, teraz budeme pracovať viacej do šírky. Uvidíme
-veľké množstvo rôznych štatistických metód a tento kurz má ambíciu
-pokryť veľkú paletu aplikácií, aby ste sa vedeli v praxi dobre
-orientovať.</p>
+množstvo rôznych štatistických metód a tento kurz má ambíciu pokryť
+veľkú paletu aplikácií, aby ste sa vedeli v praxi dobre orientovať.</p>
 <p>Základnou učebnicou je kniha <a href="https://julianfaraway.github.io/faraway/ELM/">Extending Linear
 Models with R</a>, ktorá pokrýva okolo 80% obsahu kurzu.</p>
-<p>Cvičenia bude viesť <a href="https://www.fpv.umb.sk/mmihokova/">Dr. Michaela Mihoková</a>.</p>
-<div id="súbory" class="section level3">
-<h3>Súbory</h3>
-<p>Tu je <a href="http://lukaslaffers.github.io/files/MAR2_all.pdf">môj
-starší text</a>. Budem Vám samozrejme vďačný, za akúkoľvek spätnú väzbu.
-Tento text je písaný veľmi koncentrovane a je len pomôckou, silne
-odporúčam čítať originálne zdroje.</p>
-<p>Webstránka <a href="http://lukaslaffers.github.io/linreg2" class="uri">http://lukaslaffers.github.io/linreg2</a> bude obsahovať
-všetky relevantné informácie týkajúce sa tohoto kurzu.</p>
-<p>R z prednášky: <a href="https://julianfaraway.github.io/faraway/ELM/scripts/">ELM prvé
-vydanie</a> <a href="https://julianfaraway.github.io/faraway/ELM/toc2.html">ELM druhé
+<p>Cvičenia bude viesť Dr. Michaela Mihoková.</p>
+<div id="súbory" class="section level2">
+<h2>Súbory</h2>
+<ul>
+<li>Tu je môj starší text. Budem Vám samozrejme vďačný, za akúkoľvek
+spätnú väzbu. Tento text je písaný veľmi koncentrovane a je len
+pomôckou, silne odporúčam čítať originálne zdroje.</li>
+<li>Webstránka <a href="http://lukaslaffers.github.io/linreg2" class="uri">http://lukaslaffers.github.io/linreg2</a> bude obsahovať
+všetky relevantné informácie týkajúce tohoto kurzu.</li>
+</ul>
+<p><a href="https://julianfaraway.github.io/faraway/ELM/scripts/">ELM
+prvé vydanie</a>, <a href="https://julianfaraway.github.io/faraway/ELM/toc2.html">ELM druhé
 vydanie</a></p>
+<p>R z prednášky:</p>
 <p><a href="https://www.dropbox.com/scl/fi/ydjb706jnvqg7ts1pvfmh/introlm.R?rlkey=i82or4a6ltlfecp7v5w0kxlmw&amp;dl=0">Úvod
 a zhrnutie LMwR na príklade volebných dát z US štátu Georgia v
 2000</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/btx16wd7nyrrz1nm11q81/lecture_maxlik_2025.R?rlkey=hnwqf9pviu1gqdyyb1w95o7n9&amp;dl=0">Maximum
+likelihood</a></p>
 <p>R cvičenia:</p>
 <p>Domáce úlohy:</p>
 <p>Misc:</p>
+<p><a href="https://www.dropbox.com/scl/fi/i447vt9laa8rgh0ughm6k/econx_2b_LL_2024_handout.pdf?rlkey=boiv1jjw891tm17jb2ljesqji&amp;dl=0">Úvod
+do Maximum likelihood (prvých 15 slajdov)</a></p>
+<p>Challenger katastrofa (populárna prednáška): <a href="https://www.youtube.com/watch?v=DZoa4F0aZpM">video prednášky</a>,
+<a href="https://lukaslaffers.github.io/files/PriDen_umb_Laffers_2021.pdf">slajdy</a>,
+<a href="https://www.youtube.com/watch?v=raMmRKGkGD4">Feynman</a></p>
 </div>
-<div id="rozvrh" class="section level3">
-<h3>Rozvrh</h3>
-<p>13 týždňov (9. február – 8. máj, kalendárne týždne 7–19)</p>
+<div id="rozvrh" class="section level2">
+<h2>Rozvrh</h2>
 <ul>
-<li><strong>Pondelok</strong> 9:50 – 12:05   <em>F237</em>  
-Prednáška/Cvičenie (Lukáš Lafférs)</li>
-<li><strong>Streda</strong> 12:15 – 13:40   <em>F237</em>   Cvičenia
-(Dr. Michaela Mihoková)</li>
+<li>13 týždňov (9. február – 8. máj, kalendárne týždne 7–19)</li>
+<li>Pondelok 9:50 – 12:05 F237 Prednáška/Cvičenie (Lukáš Lafférs)</li>
+<li>Streda 12:15 – 13:40 F237 Cvičenia (Dr. Michaela Mihoková)</li>
 </ul>
 </div>
-<div id="osnova-kurzu" class="section level3">
-<h3>Osnova kurzu</h3>
+<div id="osnova-kurzu" class="section level2">
+<h2>Osnova kurzu</h2>
 <ul>
-<li><p><strong>Úvod</strong> – zhrnutie lineárnych regresných modelov,
-kompletný príklad.</p></li>
-<li><p><strong>Modely pre binárne dáta</strong> – typy problémov,
-linková funkcia a pravdepodobnosť, štatistické závery, interpretácia,
+<li>Úvod – zhrnutie lineárnych regresných modelov, kompletný
+príklad.</li>
+<li>Modely pre binárne dáta – typy problémov, linková funkcia a
+pravdepodobnosť, štatistické závery, interpretácia,
 prospektívny/retrospektívny výber, mierka vhodnosti modelu,
-overdispersion, párovanie.</p></li>
-<li><p><strong>Modely pre počtové dáta</strong> – typy problémov,
-štatistické závery, interpretácia, overdispersion, Poissonovo rozdelenie
-a negatívne binomické rozdelenie, modely so zvýšeným počtom nulových
-hodnôt.</p></li>
-<li><p><strong>Kontingenčné tabuľky</strong> – nominálne vs ordinálne
-dáta, 2x2 tabuľky, výberové schémy, IxJ tabuľky, test nezávislosti
-faktorov, singular value decomposition, párované pozorovania,
-trojrozmerné tabuľky a Simpsonov paradox, ordinálne dáta.</p></li>
-<li><p><strong>Multinomiálne dáta</strong> – multinomiálny logit,
-nezávislosť irelevantných alternatív, hierarchické modely, modely
-ordinálnej odpovede – proportional odds model, ordered probit model,
-proportional hazard model.</p></li>
-<li><p><strong>Generalizované lineárne modely (GLM)</strong> –
-rozdelenie a linková funkcia, iteratívne prevažované metódy najmenších
-štvorcov, testy hypotéz – vhodnosť modelu, vnorené modely, diagnostika,
-ďalšie GLM – gamma regresia a inverzná gaussovská regresia,
-quasi-GLM.</p></li>
-<li><p><strong>Neparametrická regresia</strong> – parametrové vs
-neparametrické vs semiparametrické modely, kernelové odhady,
-Nadaraya-Watsonov odhad, splajny – bázy funkcií, prirodzené splajny,
-vyhladzovacie splajny, lokálne polynómy, vlnky, výber modelu.</p></li>
-<li><p><strong>Bootstrap</strong> – rozdelenie výberového súboru,
-myšlienka bootstrapu, testy hypotéz v lineárnych regresných modeloch,
-teória, korekcia biasu, testy hypotéz, príklady, intervaly
-spoľahlivosti, alternatívy k bootstrapu.</p></li>
-<li><p><strong>Kvantilová regresia</strong> – stredná hodnota vs
-kvantil, účinky na rozdelenie, kvantilová regresia ako optimalizačný
-problém, kvantilový účinok liečby, príklady.</p></li>
-<li><p><strong>Zovšeobecnené aditívne modely (GAM)</strong> – aditívne
-modely ako kompromis medzi parametrovým a neparametrickým modelom,
-backfitting algoritmus, alternujúce podmienené očakávania, kanonické
-korelácie, stabilizácia rozptylu, multivariačné adaptívne regresné
-splajny.</p></li>
-<li><p><strong>Modely panelových dát</strong> – typy dát, príklady,
-model s náhodnými efektmi, model s fixnými efektmi, Hausmanov test,
-Breusch-Paganov test.</p></li>
-<li><p><strong>Metóda náhodných lesov</strong> - klasifikačný a regresný
-strom, výhody/nevýhody, krížová validácia</p></li>
+overdispersion, párovanie.</li>
+<li>Modely pre počtové dáta – typy problémov, štatistické závery,
+interpretácia, overdispersion, Poissonovo rozdelenie a negatívne
+binomické rozdelenie, modely so zvýšeným počtom nulových hodnôt.</li>
+<li>Kontingenčné tabuľky – nominálne vs ordinálne dáta, 2x2 tabuľky,
+výberové schémy, IxJ tabuľky, test nezávislosti faktorov, singular value
+decomposition, párované pozorovania, trojrozmerné tabuľky a Simpsonov
+paradox, ordinálne dáta.</li>
+<li>Multinomiálne dáta – multinomiálny logit, nezávislosť irelevantných
+alternatív, hierarchické modely, modely ordinálnej odpovede –
+proportional odds model, ordered probit model, proportional hazard
+model.</li>
+<li>Generalizované lineárne modely (GLM) – rozdelenie a linková funkcia,
+iteratívne prevažované metódy najmenších štvorcov, testy hypotéz –
+vhodnosť modelu, vnorené modely, diagnostika, ďalšie GLM – gamma
+regresia a inverzná gaussovská regresia, quasi-GLM.</li>
+<li>Neparametrická regresia – parametrové vs neparametrické vs
+semiparametrické modely, kernelové odhady, Nadaraya-Watsonov odhad,
+splajny – bázy funkcií, prirodzené splajny, vyhladzovacie splajny,
+lokálne polynómy, vlnky, výber modelu.</li>
+<li>Bootstrap – rozdelenie výberového súboru, myšlienka bootstrapu,
+testy hypotéz v lineárnych regresných modeloch, teória, korekcia biasu,
+testy hypotéz, príklady, intervaly spoľahlivosti, alternatívy k
+bootstrapu.</li>
+<li>Kvantilová regresia – stredná hodnota vs kvantil, účinky na
+rozdelenie, kvantilová regresia ako optimalizačný problém, kvantilový
+účinok liečby, príklady.</li>
+<li>Zovšeobecnené aditívne modely (GAM) – aditívne modely ako kompromis
+medzi parametrovým a neparametrickým modelom, backfitting algoritmus,
+alternujúce podmienené očakávania, kanonické korelácie, stabilizácia
+rozptylu, multivariačné adaptívne regresné splajny.</li>
+<li>Modely panelových dát – typy dát, príklady, model s náhodnými
+efektmi, model s fixnými effektmi, Hausmanov test, Breusch-Paganov
+test.</li>
+<li>Metóda náhodných lesov - klasifikačný a regresný strom,
+výhody/nevýhody, krížová validácia</li>
 </ul>
 </div>
-<div id="konzultačné-hodiny" class="section level3">
-<h3>Konzultačné hodiny</h3>
-<p>Podľa dohody. Ste srdečne vítaní (<strong>naozaj</strong>)! A</p>
+<div id="konzultačné-hodiny" class="section level2">
+<h2>Konzultačné hodiny</h2>
+<p>Podľa dohody. Ste srdečne vítaní (naozaj)!</p>
 </div>
-<div id="odporúčaná-literatúra" class="section level3">
-<h3>Odporúčaná literatúra</h3>
-<div id="povinná" class="section level4">
-<h4>Povinná</h4>
+<div id="odporúčaná-literatúra" class="section level2">
+<h2>Odporúčaná literatúra</h2>
+<div id="povinná" class="section level3">
+<h3>Povinná</h3>
 <ul>
-<li>Faraway, J. <em>Extending the Linear Model with R: Generalized
-Linear, Mixed Effects and Nonparametric Regression Models</em>, Chapman
-&amp; Hall/CRC, 2006.<br />
-</li>
-<li>Faraway, J. <em>Linear Models with R</em>, Chapman &amp; Hall,
-2005.</li>
+<li>Faraway, J. Extending the Linear Model with R: Generalized Linear,
+Mixed Effects and Nonparametric Regression Models, Chapman &amp;
+Hall/CRC, 2006.</li>
+<li>Faraway, J. Linear Models with R, Chapman &amp; Hall, 2005.</li>
 </ul>
 </div>
-<div id="doplnková" class="section level4">
-<h4>Doplnková</h4>
+<div id="doplnková" class="section level3">
+<h3>Doplnková</h3>
 <ul>
-<li>Korn, Ralf, Elke Korn, a Gerald Kroisandt. <em>Monte Carlo Methods
-and Models in Finance and Insurance</em>, CRC Press, 2010.<br />
-</li>
-<li>Frees, E. <em>Regression Modeling with Actuarial and Financial
-Applications</em>, CUP, 2009.<br />
-</li>
-<li>Frees, E. <em>Longitudinal and Panel Data: Analysis and Applications
-in Social Sciences</em>, CUP, 2004.<br />
-</li>
-<li>Agresti, Alan. <em>Foundations of Linear and Generalized Linear
-Models</em>, John Wiley &amp; Sons, 2015.<br />
-</li>
-<li>Cameron, A. Colin, a Pravin K. Trivedi. <em>Microeconometrics:
-Methods and Applications</em>, Cambridge University Press, 2005.<br />
-</li>
-<li>Efron, Bradley, a Robert J. Tibshirani. <em>An Introduction to the
-Bootstrap</em>, CRC Press, 1994.<br />
-</li>
-<li>Hansen, Bruce E. <em>Lecture Notes on Nonparametrics</em>, Lecture
-Notes, 2009.<br />
-</li>
-<li>Koenker, Roger, a Kevin Hallock. <em>Quantile Regression: An
-Introduction</em>, Journal of Economic Perspectives, 15(4):43–56,
-2001.</li>
+<li>Korn, Ralf, Elke Korn, a Gerald Kroisandt. Monte Carlo Methods and
+Models in Finance and Insurance, CRC Press, 2010.</li>
+<li>Frees, E. Regression Modeling with Actuarial and Financial
+Applications, CUP, 2009.</li>
+<li>Frees, E. Longitudinal and Panel Data: Analysis and Applications in
+Social Sciences, CUP, 2004.</li>
+<li>Agresti, Alan. Foundations of Linear and Generalized Linear Models,
+John Wiley &amp; Sons, 2015.</li>
+<li>Cameron, A. Colin, a Pravin K. Trivedi. Microeconometrics: Methods
+and Applications, Cambridge University Press, 2005.</li>
+<li>Efron, Bradley, a Robert J. Tibshirani. An Introduction to the
+Bootstrap, CRC Press, 1994.</li>
+<li>Hansen, Bruce E. Lecture Notes on Nonparametrics, Lecture Notes,
+2009.</li>
+<li>Koenker, Roger, a Kevin Hallock. Quantile Regression: An
+Introduction, Journal of Economic Perspectives, 15(4):43–56, 2001.</li>
 </ul>
 </div>
 </div>
-<div id="hodnotenie" class="section level3">
-<h3>Hodnotenie</h3>
+<div id="hodnotenie" class="section level2">
+<h2>Hodnotenie</h2>
 <ul>
-<li><strong>30 %</strong> – priebežné hodnotenie (domáce úlohy a
-priebežná skúška v 2/3 kurzu)</li>
-<li><strong>70 %</strong> – záverečná skúška</li>
+<li>30 % – priebežné hodnotenie (domáce úlohy a priebežná skúška v 2/3
+kurzu)</li>
+<li>70 % – záverečná skúška</li>
 </ul>
 </div>
 </div>
