--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -382,6 +382,8 @@ a zhrnutie LMwR na príklade volebných dát z US štátu Georgia v
 likelihood</a></p>
 <p>R cvičenia:</p>
 <p>Domáce úlohy:</p>
+<p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
+na odovzdávanie</a></p>
 <p>Misc:</p>
 <p><a href="https://www.dropbox.com/scl/fi/i447vt9laa8rgh0ughm6k/econx_2b_LL_2024_handout.pdf?rlkey=boiv1jjw891tm17jb2ljesqji&amp;dl=0">Úvod
 do Maximum likelihood (prvých 15 slajdov)</a></p>
