--- a/_pages/tp.html
+++ b/_pages/tp.html
@@ -359,6 +359,14 @@ kurzu Pravdepodobnosť a štatistika 1, počas 10 týždňov si vytvoríme
 matematický aparát, ktorý je užitočný na kvantifikovanie neistoty.</p>
 <p>Webstránka <a href="http://lukaslaffers.github.io/tp" class="uri">http://lukaslaffers.github.io/tp</a> bude obsahovať všetky
 relevantné informácie týkajúce sa tohoto kurzu.</p>
+<div id="rozvrh" class="section level3">
+<h3>Rozvrh</h3>
+<ul>
+<li>10 týždňov (9. február – 17. apríl, kalendárne týždne 7–16)</li>
+<li>Pondelok 16:10 – 19:15 F225 Prednáška</li>
+<li>Streda 10:40 – 12:05 F235 Cvičenia</li>
+</ul>
+</div>
 <div id="poznámky" class="section level3">
 <h3>Poznámky</h3>
 <ul>
@@ -380,9 +388,13 @@ funkcia</a></li>
 <li><a href="https://www.dropbox.com/scl/fi/veruen8f4nkkesghxkdie/13-kapitola-Rosenthal.pdf?rlkey=k2wafuuz6ktpy2a73ftk31dgs&amp;dl=0">Podmienená
 pravdepodobnosť</a></li>
 </ul>
+<p><a href="https://www.dropbox.com/scl/fi/4foc4y5yth1jje6w3yecy/tp2026.pdf?rlkey=02eu7b80wa4hemssh1ajgoyns&amp;dl=0">priebežne
+písané v latexu</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy</h3>
+<p><a href="https://www.dropbox.com/request/HVa1U470hr0BNbSLoMf8">link
+na odovzdávanie</a></p>
 </div>
 <div id="konzultačné-hodiny" class="section level3">
 <h3>Konzultačné hodiny</h3>
