--- a/_pages/tp.html
+++ b/_pages/tp.html
@@ -393,6 +393,7 @@ písané v latexu</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy</h3>
+<p><a href="https://www.dropbox.com/scl/fi/h2o88l6ugqx9wj417ah8q/1-exercise-2026.pdf?rlkey=2cnz7cs0x0vzo1rcuv5bkgft1&amp;dl=0">DU1</a></p>
 <p><a href="https://www.dropbox.com/request/HVa1U470hr0BNbSLoMf8">link
 na odovzdávanie</a></p>
 </div>
