--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -360,36 +360,48 @@ najmenších štvorcov, teraz budeme pracovať viacej do šírky. Uvidíme
 množstvo rôznych štatistických metód a tento kurz má ambíciu pokryť
 veľkú paletu aplikácií, aby ste sa vedeli v praxi dobre orientovať.</p>
 <p>Základnou učebnicou je kniha <a href="https://julianfaraway.github.io/faraway/ELM/">Extending Linear
-Models with R</a>, ktorá pokrýva okolo 80% obsahu kurzu.</p>
+Models with R (ELMwR)</a>, ktorá pokrýva okolo 80% obsahu kurzu.</p>
 <p>Cvičenia bude viesť Dr. Michaela Mihoková.</p>
 <div id="súbory" class="section level2">
 <h2>Súbory</h2>
 <ul>
-<li>Tu je môj starší text. Budem Vám samozrejme vďačný, za akúkoľvek
-spätnú väzbu. Tento text je písaný veľmi koncentrovane a je len
-pomôckou, silne odporúčam čítať originálne zdroje.</li>
+<li><a href="https://www.dropbox.com/scl/fi/tk8i59ce7qogqfufph8mt/MAR2_all.pdf?rlkey=cbjo97goc1ifoxb1toxecgus8&amp;dl=0">Tu
+je môj starší text, ktorý budem tu a tam upravovať</a>. Budem Vám
+samozrejme vďačný, za akúkoľvek spätnú väzbu. Tento text je písaný veľmi
+koncentrovane a je len pomôckou, silne odporúčam čítať originálne
+zdroje.</li>
 <li>Webstránka <a href="http://lukaslaffers.github.io/linreg2" class="uri">http://lukaslaffers.github.io/linreg2</a> bude obsahovať
 všetky relevantné informácie týkajúce tohoto kurzu.</li>
 </ul>
-<p><a href="https://julianfaraway.github.io/faraway/ELM/scripts/">ELM
-prvé vydanie</a>, <a href="https://julianfaraway.github.io/faraway/ELM/toc2.html">ELM druhé
+<p><a href="https://julianfaraway.github.io/faraway/ELM/scripts/">ELMwR
+prvé vydanie</a>, <a href="https://julianfaraway.github.io/faraway/ELM/toc2.html">ELMwR druhé
 vydanie</a></p>
-<p>R z prednášky:</p>
+<div id="r-z-prednášky" class="section level4">
+<h4>R z prednášky:</h4>
 <p><a href="https://www.dropbox.com/scl/fi/ydjb706jnvqg7ts1pvfmh/introlm.R?rlkey=i82or4a6ltlfecp7v5w0kxlmw&amp;dl=0">Úvod
 a zhrnutie LMwR na príklade volebných dát z US štátu Georgia v
 2000</a></p>
 <p><a href="https://www.dropbox.com/scl/fi/btx16wd7nyrrz1nm11q81/lecture_maxlik_2025.R?rlkey=hnwqf9pviu1gqdyyb1w95o7n9&amp;dl=0">Maximum
 likelihood</a></p>
-<p>R cvičenia:</p>
-<p>Domáce úlohy:</p>
+<p><a href="https://www.dropbox.com/scl/fi/whmiu1hv7nhivmf6w5m6b/BinomialData.R?rlkey=1dalhhh8s1xp1pd9s4kmz1k4x&amp;dl=0">Binomické
+dáta (z prvej edície ELMwR)</a></p>
+</div>
+<div id="r-cvičenia" class="section level4">
+<h4>R cvičenia:</h4>
+</div>
+<div id="domáce-úlohy" class="section level4">
+<h4>Domáce úlohy:</h4>
 <p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
 na odovzdávanie</a></p>
-<p>Misc:</p>
+</div>
+<div id="misc" class="section level4">
+<h4>Misc:</h4>
 <p><a href="https://www.dropbox.com/scl/fi/i447vt9laa8rgh0ughm6k/econx_2b_LL_2024_handout.pdf?rlkey=boiv1jjw891tm17jb2ljesqji&amp;dl=0">Úvod
 do Maximum likelihood (prvých 15 slajdov)</a></p>
 <p>Challenger katastrofa (populárna prednáška): <a href="https://www.youtube.com/watch?v=DZoa4F0aZpM">video prednášky</a>,
 <a href="https://lukaslaffers.github.io/files/PriDen_umb_Laffers_2021.pdf">slajdy</a>,
 <a href="https://www.youtube.com/watch?v=raMmRKGkGD4">Feynman</a></p>
+</div>
 </div>
 <div id="rozvrh" class="section level2">
 <h2>Rozvrh</h2>
