--- a/_pages/research.html
+++ b/_pages/research.html
@@ -517,8 +517,8 @@ high-dimensional data in econometrics: New models, methods, applications
 <li><strong>VEGA 1/0398/23</strong> — Causality and machine learning in
 econometric models (principal investigator, 2023—2025)</li>
 <li><strong>VEGA 1/0692/20</strong> — Sensitivity analysis in
-econometric models (principal investigator, project chosen among those
-that achieved high significance. 2020—2022)</li>
+econometric models (principal investigator, <a href="https://www.minedu.sk/data/att/d13/26852.d2c86e.xlsx">project
+chosen among those that achieved high significance</a>. 2020—2022)</li>
 <li><strong>APVV-17-0329</strong> — Generating scientific information to
 support labour market policy making (received rating: Excellent,
 2017—2021)</li>
